Remove App and Vite files, lint & update colour palette

--- a/src/components/styling/Colours.mdx
+++ b/src/components/styling/Colours.mdx
@@ -1,28 +1,15 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 import { colours } from "../../styles/colours";
 
-<Meta title="Theme/Colours" />
+<Meta title="Colours" />
 
 <ColorPalette>
-  <ColorItem
-    title="Diamond"
-    subtitle="Diamond-Themed Colour Palette"
-    colors={Object.fromEntries(Object.entries(colours.diamond).map(([name, colour]) => [name, colour.default]))}
-  />
-</ColorPalette>
-
-<ColorPalette>
-  <ColorItem
-    title="New Light Diamond"
-    subtitle="New Light Diamond Themed Colour Palette"
-    colors={Object.fromEntries(Object.entries(colours.diamondII).map(([name, colour]) => [name, colour.light]))}
-  />
-</ColorPalette>
-
-<ColorPalette>
-  <ColorItem
-    title="New Dark Diamond"
-    subtitle="New Dark Diamond Themed Colour Palette"
-    colors={Object.fromEntries(Object.entries(colours.diamondII).map(([name, colour]) => [name, colour.dark]))}
-  />
+  {Object.entries(colours.colours).map(([name, colour]) => (
+    <ColorItem
+      key={name}
+      title={name}
+      subtitle={colour}
+      colors={[colour]}
+    />
+  ))}
 </ColorPalette>
