Theme with logos (#16)
Add theme specific colorscheme logos

--- a/src/storybook/Introduction.mdx
+++ b/src/storybook/Introduction.mdx
@@ -18,7 +18,7 @@ import { Meta } from "@storybook/blocks";
 
         ## Add Theme
 
-        First select the theme, BaseTheme, or DiamondTheme:
+        First select a theme: GenericTheme or DiamondTheme (or create your own):
 
 ```js
 import {
